<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.EnrollUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/materialButtonAddUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_marginTop="-5dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/blue"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/profilePictureEnrolUser"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_image_24"
                    android:contentDescription="@string/profile_picture" />

                <Button
                    android:id="@+id/selectProfilePhotoButtonEnrolUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    android:background="#00000000"
                    android:text="@string/select_profile_photo"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameTextViewEnrolUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/first_name"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameTextViewEnrolUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/last_name"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateOfBirthTextViewEnrolUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/date_of_birth"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/black"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="date"
                        android:focusable="false"
                        android:clickable="true"
                        android:longClickable="false"
                        android:editable="false"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/genderTextViewEnrolUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/gender"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:clickable="true"
                        android:longClickable="false"
                        android:editable="false"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/countryTextViewEnrolUserTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/country"

                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/black">

                    <AutoCompleteTextView
                        android:id="@+id/countryTextViewEnrolUser"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/stateTextViewEnrolUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/state"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/hometownTextViewEnrolUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/home_town"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneNumberTextViewEnrolUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/phone_number"
                    app:endIconMode="clear_text"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/telephoneNumberTextViewEnrolUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/telephone_number"
                    app:boxStrokeColor="@color/blue"
                    app:endIconMode="clear_text"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/materialButtonAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/blue"
            android:text="@string/add_user"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>